Fixing overflow

--- a/src/styles/_global.module.scss
+++ b/src/styles/_global.module.scss
@@ -47,6 +47,10 @@
   grid-area: spiral;
 }
 
+.page {
+  overflow: hidden;
+}
+
 .wrapper {
   z-index: -2;
 
